# bunnyland-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PLAN.md  PLUGINS.md  README.md  SECURITY.md  bunnyland_experience_checklist.md  bunnyland_mechanics.md  bunnyland_specification.md  compose.build.yml  compose.favicon.yml  compose.load.yml  compose.tempo.yml  compose.tls-home.yml  compose.tls.yml  compose.user.yml.template  compose.yml  pyproject.toml
.agents/skills/: coverage-hunt.md
.claude/commands/: coverage-hunt.md
.claude/plans/: parallel-hugging-patterson.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  discord-crosstest.yml  performance.yml
artifacts/experiments/clover-water-shortage-2026-07/: README.md  final-world-behavior_tree.json  final-world-behavior_tree.json.journal.jsonl  final-world-behavior_tree.json.sha256  final-world-goal_directed.json  final-world-goal_directed.json.journal.jsonl  final-world-goal_directed.json.sha256  final-world-llm.json  (+12 more)
benchmarks/: __init__.py  clover_city.py  tutorial_comparison.py  tutorials.py  world_scale.py
contracts/: http-v1-routes.json  json-schema-v1.json  mcp-v1-tools.json  openapi-v1.json
deploy/nginx/: api-locations.inc  frontend-http-static.conf  frontend-http.conf  frontend-tls-home.conf  frontend-tls-static.conf  frontend-tls.conf  tempo-location.inc
deploy/tempo/: tempo.yaml
docs/: PLAN.md  admin.md  bunnyland_experience.md  bunnyland_experience_checklist.md  bunnyland_mechanics.md  bunnyland_scripting.md  bunnyland_specification.md  discord-bot.md  host-dev-setup.md  lifesim.md  persistence.md  running-a-server.md  vps-admin-setup.md  world-creation.md
docs/admin/: README.md  admin.md  checkpoint-world-building.md  config-wizard.md  controlled-preview-runbook.md  discord-bot.md  generating-worlds.md  host-dev-setup.md  image-generation.md  mcp-local-agent.md  mcp-server.md  preview-sandbox-policy.md  running-a-server.md  vps-admin-setup.md
docs/developer/: action-availability.md  action-costs.md  authorization-surfaces.md  compatibility.md  container-image-cli.md  controller-benchmark.md  controllers.md  mcp-playability-todo.md  persistence.md  plugins.md  prompts.md  review-report-update-2026-07.md  scripting.md  security-principals.md  technical-results.md  testing.md  tutorial-benchmark.md  vision.md  world-contract-v1.md  world-creation.md  world-database-modeling.md  world-history.md  world-performance.md
docs/player/: action-points.md  barbariansim.md  checkpoints.md  colony-health-and-work.md  colony-prisoners-incidents.md  colony-research-trade.md  colonysim.md  core-actions.md  dagger-civic-property.md  daggersim.md  daily-needs.md  dino-ranching-products.md  dinosim.md  dragonsim.md  environment-and-mechanisms.md  farm-production.md  focus-notes-and-memories.md  garden-animals-artisan.md  garden-collections-shipping.md  garden-fishing-mining.md  gardening.md  gardensim.md  getting-started.md  hunger-and-thirst.md  inventory-and-use.md  life-home-routines.md  lifesim.md  movement-and-looking.md  needs-and-memory.md  neon-streets-and-fixers.md  neonsim.md  nuke-settlements-tech.md  nukesim.md  playtesting.md  repl.md  requesting-images.md  running-your-own-game.md  social-and-boundaries.md  storyteller-incidents.md  toonsim.md  (+2 more)
examples/: script-world-sets.json
examples/playtests/: discord-apple-crossing.json  discord-barbariansim-core.json  discord-bell-green.json  discord-claim-room.json  discord-clover-city.json  discord-colonysim-core.json  discord-core-actions.json  discord-daggersim-dungeon.json  discord-daggersim-economy.json  discord-daggersim-enchant-item.json  discord-daggersim-magic.json  discord-daggersim-rumor-travel.json  discord-dinosim-kaiju.json  discord-dinosim-lifecycle.json  discord-dragonsim-core.json  discord-environment-mechanisms.json  discord-gardening.json  discord-lifesim-core.json  discord-lifesim-economy-routine-social.json  discord-move-north.json  discord-narration-core.json  discord-needs-memory.json  discord-nukesim-wasteland.json  discord-storyteller-incidents.json  discord-voidsim-chaos-influence.json  discord-voidsim-navigation.json  discord-voidsim-ship-systems.json
examples/plugins/: __init__.py  motd_claim.py
examples/scripts/: epoch_bell.json  llm_only_prompt.json  move_arrival_patch.json
scripts/: benchmark-tutorials  benchmark-world  ci_report.py  compare-tutorial-benchmarks  container-auth-smoke  container-stream-load  dev-aliases.sh  discord-ci-crosstest  discord-demo-ladder-crosstest  export-clover-experiment  migrate_toon_component_names.py  test-all  test-coverage  test-performance  textual-tui-screenshot  update-v1-contracts.py  verify-migration-corpus.py  vps-docker-restart  vps-docker-setup  vps-docker-verify  vps-docker-wizard
src/bunnyland/: __init__.py  chat.py  claims.py  cli.py  cli_defaults.py  config.py  config_wizard.py  content_warnings.py  engine.py  examine_format.py  migrations.py  offline.py  persistence.py  persistence_yaml.py  telemetry.py  terminal_chat.py  terminal_config.py  terminal_generators.py
tests/: conftest.py  test_action_overrides.py  test_action_search.py  test_affect.py  test_apartment.py  test_api_v1_contract.py  test_auth.py  test_availability.py  test_barbariansim.py  test_behavior_controllers.py  test_character_chat.py  test_chat_client.py  test_checkpoints.py  test_cli_plugins.py  test_clover_experiment.py  test_colonysim.py  test_config_wizard.py  test_content_warnings.py  test_control_verbs.py  test_controller_benchmark.py  test_controller_definitions.py  test_core_mechanics.py  test_core_spine.py  test_daggersim.py  test_dinosim.py  test_discord.py  test_discord_playtest.py  test_downed_death.py  test_dragonsim.py  test_e2e.py  test_engine.py  test_environment.py  test_examine_format.py  test_examples.py  test_gardensim.py  test_graph_query.py  test_history.py  test_image_generators.py  test_imagegen_client.py  test_imagegen_discord.py  (+65 more)
(+354 files in other folders)
