[project]
name = "bunnyland"
version = "0.2.0"
description = "An asynchronous social sandbox where humans and LLM agents share persistent characters in an emergent ECS simulation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "relics",
    "pydantic>=2.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
discord = ["discord.py>=2.4"]
imagegen = ["httpx>=0.27", "websockets>=12", "Pillow>=10"]
llm = ["ollama>=0.3", "openrouter>=0.9.1"]
mcp = ["mcp>=1.10"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
tui = ["textual>=0.60", "httpx>=0.27"]
repl = ["textual>=0.60", "httpx>=0.27"]
yaml = ["PyYAML>=6.0"]

[project.scripts]
bunnyland = "bunnyland.cli:main"
bunnyland-tui = "bunnyland.tui:main"
bunnyland-repl = "bunnyland.repl:main"

[dependency-groups]
dev = [
    "pytest-cov>=7.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "hypothesis>=6.0",
    "Pillow>=10",
]

[tool.uv.sources]
relics = { git = "https://github.com/ssube/relics.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_llm: optional live LLM integration tests; skipped unless BUNNYLAND_LIVE_LLM=1 and provider credentials are set",
    "live_generation: optional live ComfyUI image-generation tests; skipped unless BUNNYLAND_LIVE_GENERATION=1 and COMFYUI_SERVER_URL is set",
    "otel: telemetry tests; skipped unless the 'otel' extra (opentelemetry-sdk) is installed",
]

[tool.coverage.run]
branch = true
source = ["bunnyland"]

[tool.coverage.report]
fail_under = 100
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
