[project]
name = "bunnyland"
version = "1.0.0rc1"
description = "An asynchronous social sandbox where humans and LLM agents share persistent characters in an emergent ECS simulation."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Thalis Mind" },
]
keywords = [
    "agent",
    "ecs",
    "game",
    "llm",
    "simulation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Simulation",
    "Typing :: Typed",
]
dependencies = [
    "relics-ecs>=0.1.0,<0.2.0",
    "pydantic>=2.0",
    "pwdlib[argon2]>=0.3",
    "PyYAML>=6.0",
]

[project.urls]
Documentation = "https://github.com/thalismind/bunnyland-server#readme"
Issues = "https://github.com/thalismind/bunnyland-server/issues"
Repository = "https://github.com/thalismind/bunnyland-server"

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
discord = ["discord.py>=2.4"]
imagegen = ["httpx>=0.27", "websockets>=12", "Pillow>=10"]
llm = ["ollama>=0.3", "openrouter>=0.9.1"]
mcp = ["mcp>=1.10"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
tui = ["textual>=0.60", "httpx>=0.27", "websockets>=12"]
repl = ["textual>=0.60", "httpx>=0.27", "websockets>=12"]

[project.scripts]
bunnyland = "bunnyland.cli:main"

[project.entry-points."bunnyland.plugins"]
"bunnyland.barbariansim" = "bunnyland.simpacks.barbariansim.plugin:plugin"
"bunnyland.checkpoints" = "bunnyland.foundation.checkpoints.plugin:plugin"
"bunnyland.colonysim" = "bunnyland.simpacks.colonysim.plugin:plugin"
"bunnyland.core_verbs" = "bunnyland.foundation.core_verbs.plugin:plugin"
"bunnyland.daggersim" = "bunnyland.simpacks.daggersim.plugin:plugin"
"bunnyland.dinosim" = "bunnyland.simpacks.dinosim.plugin:plugin"
"bunnyland.discord" = "bunnyland.discord.plugin:plugin"
"bunnyland.dragonsim" = "bunnyland.simpacks.dragonsim.plugin:plugin"
"bunnyland.environment" = "bunnyland.foundation.environment.plugin:plugin"
"bunnyland.gardensim" = "bunnyland.simpacks.gardensim.plugin:plugin"
"bunnyland.history" = "bunnyland.foundation.history.plugin:plugin"
"bunnyland.imagegen" = "bunnyland.foundation.imagegen.plugin:plugin"
"bunnyland.media" = "bunnyland.foundation.media.plugin:plugin"
"bunnyland.lifesim" = "bunnyland.simpacks.lifesim.plugin:plugin"
"bunnyland.mcp" = "bunnyland.foundation.mcp.plugin:plugin"
"bunnyland.mechanisms" = "bunnyland.foundation.mechanisms.plugin:plugin"
"bunnyland.memory" = "bunnyland.foundation.memory.plugin:plugin"
"bunnyland.neonsim" = "bunnyland.simpacks.neonsim.plugin:plugin"
"bunnyland.nukesim" = "bunnyland.simpacks.nukesim.plugin:plugin"
"bunnyland.persona" = "bunnyland.foundation.persona.plugin:plugin"
"bunnyland.policy" = "bunnyland.foundation.policy.plugin:plugin"
"bunnyland.prompt_filters" = "bunnyland.foundation.prompt_filters.plugin:plugin"
"bunnyland.social" = "bunnyland.foundation.social.plugin:plugin"
"bunnyland.storyteller" = "bunnyland.foundation.storyteller.plugin:plugin"
"bunnyland.toonsim" = "bunnyland.simpacks.toonsim.plugin:plugin"
"bunnyland.voidsim" = "bunnyland.simpacks.voidsim.plugin:plugin"
"bunnyland.worldgen" = "bunnyland.foundation.worldgen.plugin:plugin"

[dependency-groups]
dev = [
    "httpx2>=2.7",
    "pytest-cov>=7.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "hypothesis>=6.0",
    "Pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:discord.player",
    "ignore:Unclosed <MemoryObjectReceiveStream at .*:ResourceWarning:anyio.streams.memory",
]
markers = [
    "live_llm: optional live LLM integration tests; skipped unless BUNNYLAND_LIVE_LLM=1 and provider credentials are set",
    "live_imagegen_comfy: optional live ComfyUI tests; requires BUNNYLAND_LIVE_IMAGEGEN_COMFY=1 and COMFYUI_SERVER_URL",
    "live_imagegen_openrouter: optional live OpenRouter image tests; requires BUNNYLAND_LIVE_IMAGEGEN_OPENROUTER=1, credentials, and an explicit model",
    "otel: telemetry tests; skipped unless the 'otel' extra (opentelemetry-sdk) is installed",
]

[tool.coverage.run]
branch = true
source = ["bunnyland"]

[tool.coverage.report]
fail_under = 100
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
